--- a/SchoolBusWXWeb/Views/SchoolBus/GoBinding.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoBinding.cshtml
@@ -2,6 +2,9 @@
     Layout = "~/Views/Shared/_SchoolBusLayout.cshtml";
     ViewBag.Title = "绑定成功";
 }
+@section Css{
+    <link href="~/lib/mui/css/mui.picker.min.css" rel="stylesheet" />
+}
 <div class="binding_pic">
     <img src="~/img/binding_pic.png" />
     <h4>绑定成功</h4>
