--- a/SchoolBusWXWeb/Views/SchoolBus/GoUntying.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoUntying.cshtml
@@ -3,6 +3,7 @@
     ViewBag.Title = "解绑";
 }
 @section Css{
+    <link href="~/lib/mui/css/mui.picker.min.css" rel="stylesheet" />
     <style>
         body {
             background: #ffe880;
