--- a/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
@@ -5,6 +5,7 @@
 @using SchoolBusWXWeb.Models.PmsData
 @model RegisterModel
 @section Css{
+    <link href="~/lib/mui/css/mui.picker.min.css" rel="stylesheet" />
     <style>
         .mui-checkbox input[type=checkbox]:checked:before, .mui-radio input[type=radio]:checked:before {
             color: #FCC142 !important;
