--- a/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
@@ -21,6 +21,7 @@
     </style>
 }
 <div class="register_pic">
+    @ViewData["OpenId"]
     <img src="~/img/pic1.jpg" />
 </div>
 <div class="register_login">
