--- a/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
@@ -255,7 +255,7 @@
 
         // 考勤查看跳转
         mui('body').on('tap', '#calendar', function () {
-            location.href = '/SchoolBus/GoCalendar?wxid=' + openId;
+            location.href = '/SchoolBus/GoCalendar';
         });
 
         // 福利商城跳转
