--- a/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCardInfo.cshtml
@@ -8,7 +8,8 @@
     <link href="~/lib/mui/css/mui.picker.min.css" rel="stylesheet" />
 }
 <div class="register_pic">
-    <img src="~/img/pic1.jpg" />
+    @ViewData["OpenId"]
+    <img src="~/img/pic1.jpg"/>
 </div>
 <div class="information">
     <form id="frm" name="frm" method="post" asp-action="SaveCardInfo" autocomplete="off" asp-antiforgery="true">
@@ -115,11 +116,9 @@
                     type: this.method,
                     data: $(this).serialize(),
                     success: function (result) {
+                        alert(result.msg);
                         if (result.status === 1) {
-                            alert(result.msg);
-                            //window.location.href = "/SchoolBus/GoBinding";
-                        } else {
-                            alert(result.msg);
+                            window.location.href = "/SchoolBus/GoAddress?showType=1";
                         }
                     },
                     error: function (result) {
