--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -15,7 +15,7 @@
 <body>
     @RenderBody()
 <script src="~/lib/jquery/jquery.2.1.4.min.js"></script>
-    <script src="~/js/tools.js"></script>
+    <script src="~/js/tools.js" asp-append-version="true"></script>
     <script src="~/lib/mui/js/mui.min.js"></script>
     <script src="~/lib/mui/js/mui.picker.all.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
