--- a/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
@@ -128,6 +128,43 @@
     <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=dc057fdc90b12e88c567293b0ae3f4cb&plugin=AMap.Geocoder"></script>
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
     <script>
+        // 微信js
+        wx.ready(function () {
+            wx.onMenuShareAppMessage({
+                title: '实时位置',
+                desc: '点击查看',
+                link: 'http://wx.360wll.cn/SchoolBus/GoAddress?showType=1',
+                imgUrl: 'http://wx.360wll.cn/img/pic1.jpg',
+                type: '',
+                dataUrl: '',
+                success: function () {
+
+                }
+            });
+            var status = '@(Model?.status)';
+            if (status!="") {
+                // 判断msg状态（0：所绑定卡已挂失，1：所绑定卡已注销，2：已绑定卡片未完善信息）
+                if (msg === '0') {
+                    alert("所绑定卡片已挂失");
+                    wx.closeWindow();
+                }
+                if (msg === '1') {
+                    alert("所绑定卡片已注销");
+                    wx.closeWindow();
+                }
+                if (msg === '2') {
+                    alert("请先完善卡片乘车信息");
+                    //跳转完善信息页
+                    window.location.href = "/SchoolBus/goCardInfo";
+                }
+                if (msg === '3'||msg === '4') {
+                    alert("您的孩子今天还未刷卡，去逛逛福利商城吧");
+                    window.location.href = "/erweima";
+                }
+            }
+        });
+
+
         var setFullMapBtn = $('#setFullMap');
         var addressMap = $('.address_map');
         var closeFullMap = $('#closeFullMap');
@@ -167,14 +204,14 @@
 
             connection.onclose(async () => {
                 console.info('监听到链接关闭');
-                await start(); 
+                await start();
             });
 
             async function start() {
                 try {
                     await connection.start();
                     console.log("connected");
-                } catch (err) { 
+                } catch (err) {
                     console.log(err);
                     setTimeout(() => start(), 5000); // 断线重连
                 }
@@ -331,27 +368,6 @@
                 },
                 false
             );
-        }
-
-
-        function getRuntimePosition() {
-            if (@(Model?.showType) === "1") {
-                // 获取实时位置
-                $.ajax({
-                    type: "GET",
-                    url: "/webService/getRuntimePosition",
-                    data: {
-                        devCode: '1124347960'
-                    },
-                    async: false,
-                    success: function (data) {
-                        if (data.code === 1) {
-                            gps = [data.data.flng, data.data.flat];  // 更新点标记位置及时间
-                            convertFrom();
-                        }
-                    }
-                });
-            }
         }
 
     </script>
