--- a/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
@@ -53,6 +53,7 @@
 @section Scripts{
 <script src="~/lib/laydate/laydate.js"></script>
 <script src="~/js/vue.js"></script>
+<script src="~/js/wxfunction.js" asp-append-version="true"></script>
 <script>
     var marks = {};
     $(document).ready(function () {
