--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model SchoolBusWXWeb.Models.ViewData.Base_JSSDKVD
+<!DOCTYPE html>
 
 <html>
 <head>
@@ -14,7 +15,7 @@
 </head>
 <body>
     @RenderBody()
-<script src="~/lib/jquery/jquery.2.1.4.min.js"></script>
+    <script src="~/lib/jquery/jquery.2.1.4.min.js"></script>
     <script src="~/js/tools.js" asp-append-version="true"></script>
     <script src="~/lib/mui/js/mui.min.js"></script>
     <script src="~/lib/mui/js/mui.picker.all.js"></script>
@@ -22,6 +23,26 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
     <script src="~/js/base.js"></script>
     <script src="@(this.Context.Request.Scheme)://res2.wx.qq.com/open/js/jweixin-1.4.0.js"></script>
+    <script>
+        wx.config({
+            debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
+            appId: '@Model.JsSdkUiPackage.AppId', 
+            timestamp: '@Model.JsSdkUiPackage.Timestamp', 
+            nonceStr: '@Model.JsSdkUiPackage.NonceStr', 
+            signature: '@Model.JsSdkUiPackage.Signature',
+            jsApiList: [
+                'onMenuShareTimeline',
+                'onMenuShareAppMessage',
+                'closeWindow'
+            ]
+        });
+
+        wx.error(function (res) {
+            console.log(res);
+            alert('验证失败');
+        });
+
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
