--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -26,10 +26,10 @@
     <script>
         wx.config({
             debug: true, // 开启调试模式,调用的所有api的返回值会在客户端alert出来，若要查看传入的参数，可以在pc端打开，参数信息会通过log打出，仅在pc端时才会打印。
-            appId: '@Model.JsSdkUiPackage.AppId', 
-            timestamp: '@Model.JsSdkUiPackage.Timestamp', 
-            nonceStr: '@Model.JsSdkUiPackage.NonceStr', 
-            signature: '@Model.JsSdkUiPackage.Signature',
+            appId: '@(Model?.JsSdkUiPackage?.AppId)',
+            timestamp: '@(Model?.JsSdkUiPackage?.Timestamp)',
+            nonceStr: '@(Model?.JsSdkUiPackage?.NonceStr)',
+            signature: '@(Model?.JsSdkUiPackage?.Signature)',
             jsApiList: [
                 'onMenuShareTimeline',
                 'onMenuShareAppMessage',
