--- a/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
+++ b/SchoolBusWXWeb/Views/Shared/_SchoolBusLayout.cshtml
@@ -33,7 +33,8 @@
             jsApiList: [
                 'onMenuShareTimeline',
                 'onMenuShareAppMessage',
-                'closeWindow'
+                'closeWindow',
+                'hideMenuItems'
             ]
         });
 
