增加二维码页面

--- a/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
@@ -319,7 +319,7 @@
 
         // 福利商城跳转
         mui('body').on('tap', '#welfareMall', function () {
-            location.href = '/erweima'; // 跳转到二维码页面
+            location.href = '/html/erweima.html'; // 跳转到二维码页面
         });
 
         // 顶部轮播图
