--- a/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoCalendar.cshtml
@@ -121,7 +121,7 @@
 
     // 福利商城跳转
     mui('body').on('tap', '#welfareMall', function () {
-        location.href = '/erweima';
+        location.href = '/html/erweima.html';
     });
 
     Date.prototype.Format = function(fmt)   
