--- a/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/GoAddress.cshtml
@@ -163,7 +163,7 @@
                 }
                 if (status === '3'||status === '4') {
                     alert("您的孩子今天还未刷卡，去逛逛福利商城吧");
-                    window.location.href = "/erweima";
+                    window.location.href = "/html/erweima.html";
                 }
                 if (status === '5') {
                     alert("您已经解绑此卡片,去注册一下吧!");
